<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolBar"
            layout="@layout/activity_toolbar" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/tittleInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <TextView
                android:id="@+id/TVCondition"
                style="@style/baseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_details_new" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/TVSold"
                style="@style/baseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/item_details_sold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/TVDetailTittle"
            style="@style/baseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/item_details_titulo_provisional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittleInfo" />

        <ImageView
            android:id="@+id/IVDetailImage"
            android:layout_width="0dp"
            android:layout_height="182dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVDetailTittle" />

        <TextView
            android:id="@+id/TVDetailPrice"
            style="@style/baseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/item_details_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IVDetailImage" />

        <TextView
            android:id="@+id/TVDetailStock"
            style="@style/baseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/item_details_stock_disponible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVDetailPrice" />

        <TextView
            android:id="@+id/TVDetailStockValue"
            style="@style/baseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/item_details_avaibility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVDetailStock" />

        <Button
            android:id="@+id/BTNBuyNow"
            style="@style/yellowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/item_details_comprar_ahora"
            app:layout_constraintTop_toBottomOf="@+id/TVDetailStockValue" />

        <TextView
            android:id="@+id/TVDetailDescription"
            style="@style/baseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/item_details_descipcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BTNBuyNow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>